syntax = "proto3";

import "google/api/annotations.proto";

option go_package = "github.com/duc-cnzj/mars/pkg/cp;cp";

message CopyToPodRequest {
  int64 file_id = 1;
  string namespace = 2;
  string pod = 3;
  string container = 4;
}

message CopyToPodResponse {
  string podFilePath = 1;
  string output = 2;
}

service Cp {
  rpc CopyToPod(CopyToPodRequest) returns (CopyToPodResponse) {
    option (google.api.http) = {
      post: "/api/copy_to_pod",
      body: "*"
    };
  }
}
